--- a/packer/nix/templates/configuration.nix.template
+++ b/packer/nix/templates/configuration.nix.template
@@ -18,8 +18,14 @@
   ];
 
   services = {
-    openssh.enable = true;
     qemuGuest.enable = true;
+    spice-vdagentd.enable = true; 
+
+    openssh = {
+      enable = true;
+      passwordAuthentication = false;
+      permitRootLogin = "no";
+    };
     xserver = {
       enable = true;
       desktopManager = {
@@ -29,6 +35,7 @@
       displayManager.defaultSession = "xfce";
     };
   };
+  
 
   networking.firewall.enable = true;
 
@@ -54,6 +61,9 @@
     extraGroups = [
       "wheel"
       "docker"
+    ];
+    openssh.authorizedKeys.keys = [
+      "${public_key}"
     ];
     uid = 1000;
   };
