--- a/ansible/configure_network.yml
+++ b/ansible/configure_network.yml
@@ -4,6 +4,10 @@
   become: yes
 
   tasks:
+    - name: Gather vyos instance facts
+      vyos.vyos.vyos_facts:
+        available_network_resources: true
+
     - name: Load network interface information
       set_fact:
         vyos_interfaces: "{{ lookup('file', json_location) | from_json }}"
